styles.css
/* ... */
.w-commerce-commercecheckoutorderitemquantitywrapper {
    white-space: pre-wrap;
    display: flex;
}

.w-commerce-commercecheckoutorderitemoptionlist {
    margin-bottom: 0;
    padding-left: 0;
    text-decoration: none;
    list-style-type: none;
}

.w-commerce-commercelayoutsidebar {
    flex: 0 0 320px;
    position: -webkit-sticky;
    position: sticky;
    top: 20px;
}

.w-commerce-commercecheckoutordersummarywrapper {
    margin-bottom: 20px;
}

.w-commerce-commercecheckoutsummarylineitem,
.w-commerce-commercecheckoutordersummaryextraitemslistitem {
    flex-direction: row;
    justify-content: space-between;
    margin-bottom: 8px;
    display: flex;
}

.w-commerce-commercecheckoutsummarytotal {
    font-weight: 700;
}

.w-commerce-commercecheckoutplaceorderbutton {
    color: #fff;
    cursor: pointer;
    -webkit-appearance: none;
    -ms-appearance: none;
    appearance: none;
    text-align: center;
    background-color: #3898ec;
    border-width: 0;
    border-radius: 3px;
    align-items: center;
    margin-bottom: 20px;
    padding: 9px 15px;
    text-decoration: none;
    display: block;
}

.w-commerce-commercecheckouterrorstate {
    background-color: #ffdede;
    margin-top: 16px;
    margin-bottom: 16px;
    padding: 10px 16px;
}

.w-commerce-commercepaypalcheckoutformcontainer {
    background-color: #f5f5f5;
    width: 100%;
    min-height: 100vh;
    padding: 20px;
}

.w-commerce-commercecheckoutcustomerinfosummarywrapper {
    margin-bottom: 20px;
}

.w-commerce-commercecheckoutsummaryitem,
.w-commerce-commercecheckoutsummarylabel {
    margin-bottom: 8px;
}

.w-commerce-commercecheckoutsummaryflexboxdiv {
    flex-direction: row;
    justify-content: flex-start;
    display: flex;
}

.w-commerce-commercecheckoutsummarytextspacingondiv {
    margin-right: 0.33em;
}

.w-commerce-commercecheckoutpaymentsummarywrapper {
    margin-bottom: 20px;
}

.w-commerce-commercepaypalcheckouterrorstate {
    background-color: #ffdede;
    margin-top: 16px;
    margin-bottom: 16px;
    padding: 10px 16px;
}

.w-commerce-commerceorderconfirmationcontainer {
    background-color: #f5f5f5;
    width: 100%;
    min-height: 100vh;
    padding: 20px;
}

.w-commerce-commercecheckoutshippingsummarywrapper {
    margin-bottom: 20px;
}

@media screen and (max-width: 767px) {
    .w-commerce-commercelayoutcontainer {
        flex-direction: column;
        align-items: stretch;
    }

    .w-commerce-commercelayoutmain {
        flex-basis: auto;
        margin-right: 0;
    }

    .w-commerce-commercelayoutsidebar {
        flex-basis: auto;
    }
}

@media screen and (max-width: 479px) {
    .w-commerce-commercecheckoutemailinput,
    .w-commerce-commercecheckoutshippingfullname,
    .w-commerce-commercecheckoutshippingstreetaddress,
    .w-commerce-commercecheckoutshippingstreetaddressoptional {
        font-size: 16px;
    }

    .w-commerce-commercecheckoutrow {
        flex-direction: column;
    }

    .w-commerce-commercecheckoutshippingcity,
    .w-commerce-commercecheckoutshippingstateprovince,
    .w-commerce-commercecheckoutshippingzippostalcode,
    .w-commerce-commercecheckoutshippingcountryselector,
    .w-commerce-commercecheckoutcardnumber,
    .w-commerce-commercecheckoutcardexpirationdate,
    .w-commerce-commercecheckoutcardsecuritycode,
    .w-commerce-commercecheckoutbillingfullname,
    .w-commerce-commercecheckoutbillingstreetaddress,
    .w-commerce-commercecheckoutbillingstreetaddressoptional,
    .w-commerce-commercecheckoutbillingcity,
    .w-commerce-commercecheckoutbillingstateprovince,
    .w-commerce-commercecheckoutbillingzippostalcode,
    .w-commerce-commercecheckoutbillingcountryselector {
        font-size: 16px;
    }
}

.text-block {
    text-align: center;
}

.text-block-2 {
    text-align: center;
    font-size: 104px;
    line-height: 104px;
}

.image {
    text-align: center;
    object-fit: fill;
    width: 40%;
    margin-top: 5svh;
    margin-left: auto;
    margin-right: auto;
    display: block;
}

.div-block {
    grid-column-gap: 0px;
    grid-row-gap: 0px;
    text-align: center;
    flex-flow: column;
    justify-content: space-around;
    align-items: center;
    height: 1svh;
    margin-top: 0;
    margin-bottom: 5svh;
    display: flex;
}

.text-block-3 {
    font-family: Rabie, sans-serif;
    font-size: 5vw;
    line-height: 100px;
}

.div-block-2 {
    grid-column-gap: 5vw;
    grid-row-gap: 5vw;
    grid-template-rows: auto auto;
    grid-template-columns: 1fr 1fr;
    grid-auto-columns: 1fr;
    justify-content: center;
    align-items: center;
    margin-top: 3svh;
    margin-bottom: 0;
    display: flex;
}

.image-2 {
    width: 30%;
}

.link-block {
    grid-column-gap: 0px;
    grid-row-gap: 0px;
    object-fit: fill;
    flex: 0 auto;
    order: 0;
    grid-template-rows: auto auto;
    grid-template-columns: 1fr 1fr;
    grid-auto-columns: 1fr;
    justify-content: center;
    align-self: auto;
    align-items: center;
    margin-left: auto;
    margin-right: auto;
    display: block;
    position: static;
}

.hero-and-current-flavors {
    grid-column-gap: 20px;
    grid-row-gap: 20px;
    background-color: #e5daf5;
    background-image: linear-gradient(#cbb6eb, #fff);
    justify-content: center;
    align-items: center;
    padding-top: 0;
    padding-bottom: 0;
    display: block;
}

.customer-feedback {
    height: 90vh;
}

.hero {
    grid-column-gap: 1vw;
    grid-row-gap: 1vw;
    flex-flow: column;
    justify-content: center;
    align-items: center;
    width: 50%;
    margin-right: 0;
    padding-top: 5vw;
    padding-bottom: 5vw;
    display: flex;
}

.image-3 {
    border-radius: 50px;
    width: 30%;
    max-width: none;
}
/* ... */

